--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "npx prisma generate && npx prisma migrate dev && node index.js",
+    "start": "npx prisma generate && npx prisma migrate deploy && node index.js",
     "test": "jest --runInBand"
   },
   "keywords": [],
